zokrates_cli/examples/compile_errors/log_integer_type.zok
def main() {
    log("{}", 1 + 1); // 1 is of internal type {integer}
    return;
}